tests/baselines/reference/moduleResolutionWithExtensions_unexpected.errors.txt
/a.ts(1,8): error TS2307: Cannot find module 'normalize.css' or its corresponding type declarations.


==== /a.ts (1 errors) ====
    import "normalize.css";
           ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'normalize.css' or its corresponding type declarations.
    
==== /node_modules/normalize.css/normalize.css (0 errors) ====
    This file is not read.
    
==== /node_modules/normalize.css/package.json (0 errors) ====
    { "main": "normalize.css" }
    